ecmascript/parser/tests/test262-error-references/fail/f605957c30e125ae.js.stderr
error: Unexpected token Some(Word(const))
 --> $DIR/tests/test262-parser/fail/f605957c30e125ae.js:1:13
  |
1 | while(true) const a
  |             ^^^^^

